---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 15.01.2025
  Changes:
    - Change tech order on all tech. this should now display 9, 10 not (10, 9).
    - Need Migration for fusion to fission WIP
  Scripting:
    - - "par-fusion-reactor" --> "par-fission-reactor"
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 14.01.2025
  Changes:
    - Changelog typo. 0.3.2
    - Spider tech pre-requesite & recipe changed again from mk3 to mk2.
    - Removed all battery components from solar equipment.
    - Stick can now also be unlocked at Exoskeleton MK1.
    - [space-age] Armours recipes added. More to come for the other (Items/Equipments)
  Modding:
    - Removed bob's Heavy armour 3-4 from recipes & techs. Acording to progress on git.
  Scripting:
    - Some Refactoring.
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 13.11.2024
  Changes:
    - Recipe Shield MK4.
    - Removed the green scale from NVG's.
  Bugfixes:
    - NVG's MK2 was not activating at night.
  Modding:
    - Added MK3 Skeleton tech pre-requesite in spidertron with SpidertronPatrols. (No Bugs seen here) 0.3.5 or 0.3.6 @Big John.
  Info:
    - NVG's can be a bit bright but let me know. I do want to have it more phosphor white but current way is good 2 so it might stay.
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 11.11.2024
  Changes:
    - MK5 Roboport recipes.
  Bugfixes:
    - Enetity(Equipment).
    - Techtree scaling.
    - Mistakently using the hr textures on skeletone icon.
  Graphics:
    - Coloring have returned to inside the grids.
    - Removed old non hr texture files, the correct once.
    - Adjusted resoution regarding texture files.
    - Corrected the tech tree icon scale.
  Credits: