@@ -1,0 +1,62 @@
+{
+	"item": [
+        [ "par-fusion-reactor-mk1", "par-fission-reactor-mk1"],
+        [ "par-fusion-reactor-mk2", "par-fission-reactor-mk2"],
+        [ "par-fusion-reactor-mk3", "par-fission-reactor-mk3"],
+        [ "par-fusion-reactor-mk4", "par-fission-reactor-mk4"],
+        [ "par-fusion-reactor-mk5", "par-fission-reactor-mk5"],
+        [ "par-fusion-reactor-mk6", "par-fission-reactor-mk6"],
+        [ "par-fusion-reactor-mk7", "par-fission-reactor-mk7"],
+        [ "par-fusion-reactor-mk8", "par-fission-reactor-mk8"],
+        [ "par-fusion-reactor-mk9", "par-fission-reactor-mk9"],
+        [ "par-fusion-reactor-mk10", "par-fission-reactor-mk10"]
+	],
+	"entity": [
+        [ "par-fusion-reactor-mk1", "par-fission-reactor-mk1"],
+        [ "par-fusion-reactor-mk2", "par-fission-reactor-mk2"],
+        [ "par-fusion-reactor-mk3", "par-fission-reactor-mk3"],
+        [ "par-fusion-reactor-mk4", "par-fission-reactor-mk4"],
+        [ "par-fusion-reactor-mk5", "par-fission-reactor-mk5"],
+        [ "par-fusion-reactor-mk6", "par-fission-reactor-mk6"],
+        [ "par-fusion-reactor-mk7", "par-fission-reactor-mk7"],
+        [ "par-fusion-reactor-mk8", "par-fission-reactor-mk8"],
+        [ "par-fusion-reactor-mk9", "par-fission-reactor-mk9"],
+        [ "par-fusion-reactor-mk10", "par-fission-reactor-mk10"]
+	],
+	"equipment": [
+        [ "par-fusion-reactor-mk1", "par-fission-reactor-mk1"],
+        [ "par-fusion-reactor-mk2", "par-fission-reactor-mk2"],
+        [ "par-fusion-reactor-mk3", "par-fission-reactor-mk3"],
+        [ "par-fusion-reactor-mk4", "par-fission-reactor-mk4"],
+        [ "par-fusion-reactor-mk5", "par-fission-reactor-mk5"],
+        [ "par-fusion-reactor-mk6", "par-fission-reactor-mk6"],
+        [ "par-fusion-reactor-mk7", "par-fission-reactor-mk7"],
+        [ "par-fusion-reactor-mk8", "par-fission-reactor-mk8"],
+        [ "par-fusion-reactor-mk9", "par-fission-reactor-mk9"],
+        [ "par-fusion-reactor-mk10", "par-fission-reactor-mk10"]
+	],
+	"recipe": [
+        [ "par-fusion-reactor-mk1", "par-fission-reactor-mk1"],
+        [ "par-fusion-reactor-mk2", "par-fission-reactor-mk2"],
+        [ "par-fusion-reactor-mk3", "par-fission-reactor-mk3"],
+        [ "par-fusion-reactor-mk4", "par-fission-reactor-mk4"],
+        [ "par-fusion-reactor-mk5", "par-fission-reactor-mk5"],
+        [ "par-fusion-reactor-mk6", "par-fission-reactor-mk6"],
+        [ "par-fusion-reactor-mk7", "par-fission-reactor-mk7"],
+        [ "par-fusion-reactor-mk8", "par-fission-reactor-mk8"],
+        [ "par-fusion-reactor-mk9", "par-fission-reactor-mk9"],
+        [ "par-fusion-reactor-mk10", "par-fission-reactor-mk10"]
+	],
+	"technology": [
+		[ "par-fusion-reactor-tech-1", "par-fission-reactor-tech-1"],
+		[ "par-fusion-reactor-tech-2", "par-fission-reactor-tech-2"],
+		[ "par-fusion-reactor-tech-3", "par-fission-reactor-tech-3"],
+		[ "par-fusion-reactor-tech-4", "par-fission-reactor-tech-4"],
+		[ "par-fusion-reactor-tech-5", "par-fission-reactor-tech-5"],
+		[ "par-fusion-reactor-tech-6", "par-fission-reactor-tech-6"],
+		[ "par-fusion-reactor-tech-7", "par-fission-reactor-tech-7"],
+		[ "par-fusion-reactor-tech-8", "par-fission-reactor-tech-8"],
+		[ "par-fusion-reactor-tech-9", "par-fission-reactor-tech-9"],
+		[ "par-fusion-reactor-tech-10", "par-fission-reactor-tech-10"]
+	]
+}
